[package]
name = "raoc"
version = "0.1.0"
edition = "2021"
authors = ["InCogNiTo124 <msmetko@msmetko.xyz>"]

[dependencies]
scanf = "1.2.1"

[[bin]]
name = "2015-01-1"
path = "2015/src/bin/01/1.rs"

[[bin]]
name = "2015-01-2"
path = "2015/src/bin/01/2.rs"

[[bin]]
name = "2015-02-1"
path = "2015/src/bin/02/1.rs"

[[bin]]
name = "2015-02-2"
path = "2015/src/bin/02/2.rs"

[[bin]]
name = "2015-03-1"
path = "2015/src/bin/03/1.rs"

[[bin]]
name = "2015-03-2"
path = "2015/src/bin/03/2.rs"

[[bin]]
name = "2015-04-1"
path = "2015/src/bin/04/1.rs"

[[bin]]
name = "2015-04-2"
path = "2015/src/bin/04/2.rs"

[[bin]]
name = "2015-05-1"
path = "2015/src/bin/05/1.rs"

[[bin]]
name = "2015-05-2"
path = "2015/src/bin/05/2.rs"

[[bin]]
name = "2015-06-1"
path = "2015/src/bin/06/1.rs"

[[bin]]
name = "2015-06-2"
path = "2015/src/bin/06/2.rs"

[[bin]]
name = "2015-07-1"
path = "2015/src/bin/07/1.rs"

[[bin]]
name = "2015-07-2"
path = "2015/src/bin/07/2.rs"

[[bin]]
name = "2015-08-1"
path = "2015/src/bin/08/1.rs"

[[bin]]
name = "2015-08-2"
path = "2015/src/bin/08/2.rs"

[[bin]]
name = "2015-09-1"
path = "2015/src/bin/09/1.rs"

[[bin]]
name = "2015-09-2"
path = "2015/src/bin/09/2.rs"

[[bin]]
name = "2015-10-1"
path = "2015/src/bin/10/1.rs"

[[bin]]
name = "2015-10-2"
path = "2015/src/bin/10/2.rs"

[[bin]]
name = "2015-11-1"
path = "2015/src/bin/11/1.rs"

[[bin]]
name = "2015-11-2"
path = "2015/src/bin/11/2.rs"

[[bin]]
name = "2015-12-1"
path = "2015/src/bin/12/1.rs"

[[bin]]
name = "2015-12-2"
path = "2015/src/bin/12/2.rs"

[[bin]]
name = "2015-13-1"
path = "2015/src/bin/13/1.rs"

[[bin]]
name = "2015-13-2"
path = "2015/src/bin/13/2.rs"

[[bin]]
name = "2015-14-1"
path = "2015/src/bin/14/1.rs"

[[bin]]
name = "2015-14-2"
path = "2015/src/bin/14/2.rs"

[[bin]]
name = "2015-15-1"
path = "2015/src/bin/15/1.rs"

[[bin]]
name = "2015-15-2"
path = "2015/src/bin/15/2.rs"

[[bin]]
name = "2015-16-1"
path = "2015/src/bin/16/1.rs"

[[bin]]
name = "2015-16-2"
path = "2015/src/bin/16/2.rs"

[[bin]]
name = "2015-17-1"
path = "2015/src/bin/17/1.rs"

[[bin]]
name = "2015-17-2"
path = "2015/src/bin/17/2.rs"

[[bin]]
name = "2015-18-1"
path = "2015/src/bin/18/1.rs"

[[bin]]
name = "2015-18-2"
path = "2015/src/bin/18/2.rs"

[[bin]]
name = "2015-19-1"
path = "2015/src/bin/19/1.rs"

[[bin]]
name = "2015-19-2"
path = "2015/src/bin/19/2.rs"

[[bin]]
name = "2015-20-1"
path = "2015/src/bin/20/1.rs"

[[bin]]
name = "2015-20-2"
path = "2015/src/bin/20/2.rs"

[[bin]]
name = "2015-21-1"
path = "2015/src/bin/21/1.rs"

[[bin]]
name = "2015-21-2"
path = "2015/src/bin/21/2.rs"

[[bin]]
name = "2015-22-1"
path = "2015/src/bin/22/1.rs"

[[bin]]
name = "2015-22-2"
path = "2015/src/bin/22/2.rs"

[[bin]]
name = "2015-23-1"
path = "2015/src/bin/23/1.rs"

[[bin]]
name = "2015-23-2"
path = "2015/src/bin/23/2.rs"

[[bin]]
name = "2015-24-1"
path = "2015/src/bin/24/1.rs"

[[bin]]
name = "2015-24-2"
path = "2015/src/bin/24/2.rs"

[[bin]]
name = "2015-25-1"
path = "2015/src/bin/25/1.rs"

[[bin]]
name = "2015-25-2"
path = "2015/src/bin/25/2.rs"

[[bin]]
name = "2016-01-1"
path = "2016/src/bin/01/1.rs"

[[bin]]
name = "2016-01-2"
path = "2016/src/bin/01/2.rs"

[[bin]]
name = "2016-02-1"
path = "2016/src/bin/02/1.rs"

[[bin]]
name = "2016-02-2"
path = "2016/src/bin/02/2.rs"

[[bin]]
name = "2016-03-1"
path = "2016/src/bin/03/1.rs"

[[bin]]
name = "2016-03-2"
path = "2016/src/bin/03/2.rs"

[[bin]]
name = "2016-04-1"
path = "2016/src/bin/04/1.rs"

[[bin]]
name = "2016-04-2"
path = "2016/src/bin/04/2.rs"

[[bin]]
name = "2016-05-1"
path = "2016/src/bin/05/1.rs"

[[bin]]
name = "2016-05-2"
path = "2016/src/bin/05/2.rs"

[[bin]]
name = "2016-06-1"
path = "2016/src/bin/06/1.rs"

[[bin]]
name = "2016-06-2"
path = "2016/src/bin/06/2.rs"

[[bin]]
name = "2016-07-1"
path = "2016/src/bin/07/1.rs"

[[bin]]
name = "2016-07-2"
path = "2016/src/bin/07/2.rs"

[[bin]]
name = "2016-08-1"
path = "2016/src/bin/08/1.rs"

[[bin]]
name = "2016-08-2"
path = "2016/src/bin/08/2.rs"

[[bin]]
name = "2016-09-1"
path = "2016/src/bin/09/1.rs"

[[bin]]
name = "2016-09-2"
path = "2016/src/bin/09/2.rs"

[[bin]]
name = "2016-10-1"
path = "2016/src/bin/10/1.rs"

[[bin]]
name = "2016-10-2"
path = "2016/src/bin/10/2.rs"

[[bin]]
name = "2016-11-1"
path = "2016/src/bin/11/1.rs"

[[bin]]
name = "2016-11-2"
path = "2016/src/bin/11/2.rs"

[[bin]]
name = "2016-12-1"
path = "2016/src/bin/12/1.rs"

[[bin]]
name = "2016-12-2"
path = "2016/src/bin/12/2.rs"

[[bin]]
name = "2016-13-1"
path = "2016/src/bin/13/1.rs"

[[bin]]
name = "2016-13-2"
path = "2016/src/bin/13/2.rs"

[[bin]]
name = "2016-14-1"
path = "2016/src/bin/14/1.rs"

[[bin]]
name = "2016-14-2"
path = "2016/src/bin/14/2.rs"

[[bin]]
name = "2016-15-1"
path = "2016/src/bin/15/1.rs"

[[bin]]
name = "2016-15-2"
path = "2016/src/bin/15/2.rs"

[[bin]]
name = "2016-16-1"
path = "2016/src/bin/16/1.rs"

[[bin]]
name = "2016-16-2"
path = "2016/src/bin/16/2.rs"

[[bin]]
name = "2016-17-1"
path = "2016/src/bin/17/1.rs"

[[bin]]
name = "2016-17-2"
path = "2016/src/bin/17/2.rs"

[[bin]]
name = "2016-18-1"
path = "2016/src/bin/18/1.rs"

[[bin]]
name = "2016-18-2"
path = "2016/src/bin/18/2.rs"

[[bin]]
name = "2016-19-1"
path = "2016/src/bin/19/1.rs"

[[bin]]
name = "2016-19-2"
path = "2016/src/bin/19/2.rs"

[[bin]]
name = "2016-20-1"
path = "2016/src/bin/20/1.rs"

[[bin]]
name = "2016-20-2"
path = "2016/src/bin/20/2.rs"

[[bin]]
name = "2016-21-1"
path = "2016/src/bin/21/1.rs"

[[bin]]
name = "2016-21-2"
path = "2016/src/bin/21/2.rs"

[[bin]]
name = "2016-22-1"
path = "2016/src/bin/22/1.rs"

[[bin]]
name = "2016-22-2"
path = "2016/src/bin/22/2.rs"

[[bin]]
name = "2016-23-1"
path = "2016/src/bin/23/1.rs"

[[bin]]
name = "2016-23-2"
path = "2016/src/bin/23/2.rs"

[[bin]]
name = "2016-24-1"
path = "2016/src/bin/24/1.rs"

[[bin]]
name = "2016-24-2"
path = "2016/src/bin/24/2.rs"

[[bin]]
name = "2016-25-1"
path = "2016/src/bin/25/1.rs"

[[bin]]
name = "2016-25-2"
path = "2016/src/bin/25/2.rs"

[[bin]]
name = "2017-01-1"
path = "2017/src/bin/01/1.rs"

[[bin]]
name = "2017-01-2"
path = "2017/src/bin/01/2.rs"

[[bin]]
name = "2017-02-1"
path = "2017/src/bin/02/1.rs"

[[bin]]
name = "2017-02-2"
path = "2017/src/bin/02/2.rs"

[[bin]]
name = "2017-03-1"
path = "2017/src/bin/03/1.rs"

[[bin]]
name = "2017-03-2"
path = "2017/src/bin/03/2.rs"

[[bin]]
name = "2017-04-1"
path = "2017/src/bin/04/1.rs"

[[bin]]
name = "2017-04-2"
path = "2017/src/bin/04/2.rs"

[[bin]]
name = "2017-05-1"
path = "2017/src/bin/05/1.rs"

[[bin]]
name = "2017-05-2"
path = "2017/src/bin/05/2.rs"

[[bin]]
name = "2017-06-1"
path = "2017/src/bin/06/1.rs"

[[bin]]
name = "2017-06-2"
path = "2017/src/bin/06/2.rs"

[[bin]]
name = "2017-07-1"
path = "2017/src/bin/07/1.rs"

[[bin]]
name = "2017-07-2"
path = "2017/src/bin/07/2.rs"

[[bin]]
name = "2017-08-1"
path = "2017/src/bin/08/1.rs"

[[bin]]
name = "2017-08-2"
path = "2017/src/bin/08/2.rs"

[[bin]]
name = "2017-09-1"
path = "2017/src/bin/09/1.rs"

[[bin]]
name = "2017-09-2"
path = "2017/src/bin/09/2.rs"

[[bin]]
name = "2017-10-1"
path = "2017/src/bin/10/1.rs"

[[bin]]
name = "2017-10-2"
path = "2017/src/bin/10/2.rs"

[[bin]]
name = "2017-11-1"
path = "2017/src/bin/11/1.rs"

[[bin]]
name = "2017-11-2"
path = "2017/src/bin/11/2.rs"

[[bin]]
name = "2017-12-1"
path = "2017/src/bin/12/1.rs"

[[bin]]
name = "2017-12-2"
path = "2017/src/bin/12/2.rs"

[[bin]]
name = "2017-13-1"
path = "2017/src/bin/13/1.rs"

[[bin]]
name = "2017-13-2"
path = "2017/src/bin/13/2.rs"

[[bin]]
name = "2017-14-1"
path = "2017/src/bin/14/1.rs"

[[bin]]
name = "2017-14-2"
path = "2017/src/bin/14/2.rs"

[[bin]]
name = "2017-15-1"
path = "2017/src/bin/15/1.rs"

[[bin]]
name = "2017-15-2"
path = "2017/src/bin/15/2.rs"

[[bin]]
name = "2017-16-1"
path = "2017/src/bin/16/1.rs"

[[bin]]
name = "2017-16-2"
path = "2017/src/bin/16/2.rs"

[[bin]]
name = "2017-17-1"
path = "2017/src/bin/17/1.rs"

[[bin]]
name = "2017-17-2"
path = "2017/src/bin/17/2.rs"

[[bin]]
name = "2017-18-1"
path = "2017/src/bin/18/1.rs"

[[bin]]
name = "2017-18-2"
path = "2017/src/bin/18/2.rs"

[[bin]]
name = "2017-19-1"
path = "2017/src/bin/19/1.rs"

[[bin]]
name = "2017-19-2"
path = "2017/src/bin/19/2.rs"

[[bin]]
name = "2017-20-1"
path = "2017/src/bin/20/1.rs"

[[bin]]
name = "2017-20-2"
path = "2017/src/bin/20/2.rs"

[[bin]]
name = "2017-21-1"
path = "2017/src/bin/21/1.rs"

[[bin]]
name = "2017-21-2"
path = "2017/src/bin/21/2.rs"

[[bin]]
name = "2017-22-1"
path = "2017/src/bin/22/1.rs"

[[bin]]
name = "2017-22-2"
path = "2017/src/bin/22/2.rs"

[[bin]]
name = "2017-23-1"
path = "2017/src/bin/23/1.rs"

[[bin]]
name = "2017-23-2"
path = "2017/src/bin/23/2.rs"

[[bin]]
name = "2017-24-1"
path = "2017/src/bin/24/1.rs"

[[bin]]
name = "2017-24-2"
path = "2017/src/bin/24/2.rs"

[[bin]]
name = "2017-25-1"
path = "2017/src/bin/25/1.rs"

[[bin]]
name = "2017-25-2"
path = "2017/src/bin/25/2.rs"

[[bin]]
name = "2018-01-1"
path = "2018/src/bin/01/1.rs"

[[bin]]
name = "2018-01-2"
path = "2018/src/bin/01/2.rs"

[[bin]]
name = "2018-02-1"
path = "2018/src/bin/02/1.rs"

[[bin]]
name = "2018-02-2"
path = "2018/src/bin/02/2.rs"

[[bin]]
name = "2018-03-1"
path = "2018/src/bin/03/1.rs"

[[bin]]
name = "2018-03-2"
path = "2018/src/bin/03/2.rs"

[[bin]]
name = "2018-04-1"
path = "2018/src/bin/04/1.rs"

[[bin]]
name = "2018-04-2"
path = "2018/src/bin/04/2.rs"

[[bin]]
name = "2018-05-1"
path = "2018/src/bin/05/1.rs"

[[bin]]
name = "2018-05-2"
path = "2018/src/bin/05/2.rs"

[[bin]]
name = "2018-06-1"
path = "2018/src/bin/06/1.rs"

[[bin]]
name = "2018-06-2"
path = "2018/src/bin/06/2.rs"

[[bin]]
name = "2018-07-1"
path = "2018/src/bin/07/1.rs"

[[bin]]
name = "2018-07-2"
path = "2018/src/bin/07/2.rs"

[[bin]]
name = "2018-08-1"
path = "2018/src/bin/08/1.rs"

[[bin]]
name = "2018-08-2"
path = "2018/src/bin/08/2.rs"

[[bin]]
name = "2018-09-1"
path = "2018/src/bin/09/1.rs"

[[bin]]
name = "2018-09-2"
path = "2018/src/bin/09/2.rs"

[[bin]]
name = "2018-10-1"
path = "2018/src/bin/10/1.rs"

[[bin]]
name = "2018-10-2"
path = "2018/src/bin/10/2.rs"

[[bin]]
name = "2018-11-1"
path = "2018/src/bin/11/1.rs"

[[bin]]
name = "2018-11-2"
path = "2018/src/bin/11/2.rs"

[[bin]]
name = "2018-12-1"
path = "2018/src/bin/12/1.rs"

[[bin]]
name = "2018-12-2"
path = "2018/src/bin/12/2.rs"

[[bin]]
name = "2018-13-1"
path = "2018/src/bin/13/1.rs"

[[bin]]
name = "2018-13-2"
path = "2018/src/bin/13/2.rs"

[[bin]]
name = "2018-14-1"
path = "2018/src/bin/14/1.rs"

[[bin]]
name = "2018-14-2"
path = "2018/src/bin/14/2.rs"

[[bin]]
name = "2018-15-1"
path = "2018/src/bin/15/1.rs"

[[bin]]
name = "2018-15-2"
path = "2018/src/bin/15/2.rs"

[[bin]]
name = "2018-16-1"
path = "2018/src/bin/16/1.rs"

[[bin]]
name = "2018-16-2"
path = "2018/src/bin/16/2.rs"

[[bin]]
name = "2018-17-1"
path = "2018/src/bin/17/1.rs"

[[bin]]
name = "2018-17-2"
path = "2018/src/bin/17/2.rs"

[[bin]]
name = "2018-18-1"
path = "2018/src/bin/18/1.rs"

[[bin]]
name = "2018-18-2"
path = "2018/src/bin/18/2.rs"

[[bin]]
name = "2018-19-1"
path = "2018/src/bin/19/1.rs"

[[bin]]
name = "2018-19-2"
path = "2018/src/bin/19/2.rs"

[[bin]]
name = "2018-20-1"
path = "2018/src/bin/20/1.rs"

[[bin]]
name = "2018-20-2"
path = "2018/src/bin/20/2.rs"

[[bin]]
name = "2018-21-1"
path = "2018/src/bin/21/1.rs"

[[bin]]
name = "2018-21-2"
path = "2018/src/bin/21/2.rs"

[[bin]]
name = "2018-22-1"
path = "2018/src/bin/22/1.rs"

[[bin]]
name = "2018-22-2"
path = "2018/src/bin/22/2.rs"

[[bin]]
name = "2018-23-1"
path = "2018/src/bin/23/1.rs"

[[bin]]
name = "2018-23-2"
path = "2018/src/bin/23/2.rs"

[[bin]]
name = "2018-24-1"
path = "2018/src/bin/24/1.rs"

[[bin]]
name = "2018-24-2"
path = "2018/src/bin/24/2.rs"

[[bin]]
name = "2018-25-1"
path = "2018/src/bin/25/1.rs"

[[bin]]
name = "2018-25-2"
path = "2018/src/bin/25/2.rs"

[[bin]]
name = "2019-01-1"
path = "2019/src/bin/01/1.rs"

[[bin]]
name = "2019-01-2"
path = "2019/src/bin/01/2.rs"

[[bin]]
name = "2019-02-1"
path = "2019/src/bin/02/1.rs"

[[bin]]
name = "2019-02-2"
path = "2019/src/bin/02/2.rs"

[[bin]]
name = "2019-03-1"
path = "2019/src/bin/03/1.rs"

[[bin]]
name = "2019-03-2"
path = "2019/src/bin/03/2.rs"

[[bin]]
name = "2019-04-1"
path = "2019/src/bin/04/1.rs"

[[bin]]
name = "2019-04-2"
path = "2019/src/bin/04/2.rs"

[[bin]]
name = "2019-05-1"
path = "2019/src/bin/05/1.rs"

[[bin]]
name = "2019-05-2"
path = "2019/src/bin/05/2.rs"

[[bin]]
name = "2019-06-1"
path = "2019/src/bin/06/1.rs"

[[bin]]
name = "2019-06-2"
path = "2019/src/bin/06/2.rs"

[[bin]]
name = "2019-07-1"
path = "2019/src/bin/07/1.rs"

[[bin]]
name = "2019-07-2"
path = "2019/src/bin/07/2.rs"

[[bin]]
name = "2019-08-1"
path = "2019/src/bin/08/1.rs"

[[bin]]
name = "2019-08-2"
path = "2019/src/bin/08/2.rs"

[[bin]]
name = "2019-09-1"
path = "2019/src/bin/09/1.rs"

[[bin]]
name = "2019-09-2"
path = "2019/src/bin/09/2.rs"

[[bin]]
name = "2019-10-1"
path = "2019/src/bin/10/1.rs"

[[bin]]
name = "2019-10-2"
path = "2019/src/bin/10/2.rs"

[[bin]]
name = "2019-11-1"
path = "2019/src/bin/11/1.rs"

[[bin]]
name = "2019-11-2"
path = "2019/src/bin/11/2.rs"

[[bin]]
name = "2019-12-1"
path = "2019/src/bin/12/1.rs"

[[bin]]
name = "2019-12-2"
path = "2019/src/bin/12/2.rs"

[[bin]]
name = "2019-13-1"
path = "2019/src/bin/13/1.rs"

[[bin]]
name = "2019-13-2"
path = "2019/src/bin/13/2.rs"

[[bin]]
name = "2019-14-1"
path = "2019/src/bin/14/1.rs"

[[bin]]
name = "2019-14-2"
path = "2019/src/bin/14/2.rs"

[[bin]]
name = "2019-15-1"
path = "2019/src/bin/15/1.rs"

[[bin]]
name = "2019-15-2"
path = "2019/src/bin/15/2.rs"

[[bin]]
name = "2019-16-1"
path = "2019/src/bin/16/1.rs"

[[bin]]
name = "2019-16-2"
path = "2019/src/bin/16/2.rs"

[[bin]]
name = "2019-17-1"
path = "2019/src/bin/17/1.rs"

[[bin]]
name = "2019-17-2"
path = "2019/src/bin/17/2.rs"

[[bin]]
name = "2019-18-1"
path = "2019/src/bin/18/1.rs"

[[bin]]
name = "2019-18-2"
path = "2019/src/bin/18/2.rs"

[[bin]]
name = "2019-19-1"
path = "2019/src/bin/19/1.rs"

[[bin]]
name = "2019-19-2"
path = "2019/src/bin/19/2.rs"

[[bin]]
name = "2019-20-1"
path = "2019/src/bin/20/1.rs"

[[bin]]
name = "2019-20-2"
path = "2019/src/bin/20/2.rs"

[[bin]]
name = "2019-21-1"
path = "2019/src/bin/21/1.rs"

[[bin]]
name = "2019-21-2"
path = "2019/src/bin/21/2.rs"

[[bin]]
name = "2019-22-1"
path = "2019/src/bin/22/1.rs"

[[bin]]
name = "2019-22-2"
path = "2019/src/bin/22/2.rs"

[[bin]]
name = "2019-23-1"
path = "2019/src/bin/23/1.rs"

[[bin]]
name = "2019-23-2"
path = "2019/src/bin/23/2.rs"

[[bin]]
name = "2019-24-1"
path = "2019/src/bin/24/1.rs"

[[bin]]
name = "2019-24-2"
path = "2019/src/bin/24/2.rs"

[[bin]]
name = "2019-25-1"
path = "2019/src/bin/25/1.rs"

[[bin]]
name = "2019-25-2"
path = "2019/src/bin/25/2.rs"

[[bin]]
name = "2020-01-1"
path = "2020/src/bin/01/1.rs"

[[bin]]
name = "2020-01-2"
path = "2020/src/bin/01/2.rs"

[[bin]]
name = "2020-02-1"
path = "2020/src/bin/02/1.rs"

[[bin]]
name = "2020-02-2"
path = "2020/src/bin/02/2.rs"

[[bin]]
name = "2020-03-1"
path = "2020/src/bin/03/1.rs"

[[bin]]
name = "2020-03-2"
path = "2020/src/bin/03/2.rs"

[[bin]]
name = "2020-04-1"
path = "2020/src/bin/04/1.rs"

[[bin]]
name = "2020-04-2"
path = "2020/src/bin/04/2.rs"

[[bin]]
name = "2020-05-1"
path = "2020/src/bin/05/1.rs"

[[bin]]
name = "2020-05-2"
path = "2020/src/bin/05/2.rs"

[[bin]]
name = "2020-06-1"
path = "2020/src/bin/06/1.rs"

[[bin]]
name = "2020-06-2"
path = "2020/src/bin/06/2.rs"

[[bin]]
name = "2020-07-1"
path = "2020/src/bin/07/1.rs"

[[bin]]
name = "2020-07-2"
path = "2020/src/bin/07/2.rs"

[[bin]]
name = "2020-08-1"
path = "2020/src/bin/08/1.rs"

[[bin]]
name = "2020-08-2"
path = "2020/src/bin/08/2.rs"

[[bin]]
name = "2020-09-1"
path = "2020/src/bin/09/1.rs"

[[bin]]
name = "2020-09-2"
path = "2020/src/bin/09/2.rs"

[[bin]]
name = "2020-10-1"
path = "2020/src/bin/10/1.rs"

[[bin]]
name = "2020-10-2"
path = "2020/src/bin/10/2.rs"

[[bin]]
name = "2020-11-1"
path = "2020/src/bin/11/1.rs"

[[bin]]
name = "2020-11-2"
path = "2020/src/bin/11/2.rs"

[[bin]]
name = "2020-12-1"
path = "2020/src/bin/12/1.rs"

[[bin]]
name = "2020-12-2"
path = "2020/src/bin/12/2.rs"

[[bin]]
name = "2020-13-1"
path = "2020/src/bin/13/1.rs"

[[bin]]
name = "2020-13-2"
path = "2020/src/bin/13/2.rs"

[[bin]]
name = "2020-14-1"
path = "2020/src/bin/14/1.rs"

[[bin]]
name = "2020-14-2"
path = "2020/src/bin/14/2.rs"

[[bin]]
name = "2020-15-1"
path = "2020/src/bin/15/1.rs"

[[bin]]
name = "2020-15-2"
path = "2020/src/bin/15/2.rs"

[[bin]]
name = "2020-16-1"
path = "2020/src/bin/16/1.rs"

[[bin]]
name = "2020-16-2"
path = "2020/src/bin/16/2.rs"

[[bin]]
name = "2020-17-1"
path = "2020/src/bin/17/1.rs"

[[bin]]
name = "2020-17-2"
path = "2020/src/bin/17/2.rs"

[[bin]]
name = "2020-18-1"
path = "2020/src/bin/18/1.rs"

[[bin]]
name = "2020-18-2"
path = "2020/src/bin/18/2.rs"

[[bin]]
name = "2020-19-1"
path = "2020/src/bin/19/1.rs"

[[bin]]
name = "2020-19-2"
path = "2020/src/bin/19/2.rs"

[[bin]]
name = "2020-20-1"
path = "2020/src/bin/20/1.rs"

[[bin]]
name = "2020-20-2"
path = "2020/src/bin/20/2.rs"

[[bin]]
name = "2020-21-1"
path = "2020/src/bin/21/1.rs"

[[bin]]
name = "2020-21-2"
path = "2020/src/bin/21/2.rs"

[[bin]]
name = "2020-22-1"
path = "2020/src/bin/22/1.rs"

[[bin]]
name = "2020-22-2"
path = "2020/src/bin/22/2.rs"

[[bin]]
name = "2020-23-1"
path = "2020/src/bin/23/1.rs"

[[bin]]
name = "2020-23-2"
path = "2020/src/bin/23/2.rs"

[[bin]]
name = "2020-24-1"
path = "2020/src/bin/24/1.rs"

[[bin]]
name = "2020-24-2"
path = "2020/src/bin/24/2.rs"

[[bin]]
name = "2020-25-1"
path = "2020/src/bin/25/1.rs"

[[bin]]
name = "2020-25-2"
path = "2020/src/bin/25/2.rs"

[[bin]]
name = "2021-01-1"
path = "2021/src/bin/01/1.rs"

[[bin]]
name = "2021-01-2"
path = "2021/src/bin/01/2.rs"

[[bin]]
name = "2021-02-1"
path = "2021/src/bin/02/1.rs"

[[bin]]
name = "2021-02-2"
path = "2021/src/bin/02/2.rs"

[[bin]]
name = "2021-03-1"
path = "2021/src/bin/03/1.rs"

[[bin]]
name = "2021-03-2"
path = "2021/src/bin/03/2.rs"

[[bin]]
name = "2021-04-1"
path = "2021/src/bin/04/1.rs"

[[bin]]
name = "2021-04-2"
path = "2021/src/bin/04/2.rs"

[[bin]]
name = "2021-05-1"
path = "2021/src/bin/05/1.rs"

[[bin]]
name = "2021-05-2"
path = "2021/src/bin/05/2.rs"

[[bin]]
name = "2021-06-1"
path = "2021/src/bin/06/1.rs"

[[bin]]
name = "2021-06-2"
path = "2021/src/bin/06/2.rs"

[[bin]]
name = "2021-07-1"
path = "2021/src/bin/07/1.rs"

[[bin]]
name = "2021-07-2"
path = "2021/src/bin/07/2.rs"

[[bin]]
name = "2021-08-1"
path = "2021/src/bin/08/1.rs"

[[bin]]
name = "2021-08-2"
path = "2021/src/bin/08/2.rs"

[[bin]]
name = "2021-09-1"
path = "2021/src/bin/09/1.rs"

[[bin]]
name = "2021-09-2"
path = "2021/src/bin/09/2.rs"

[[bin]]
name = "2021-10-1"
path = "2021/src/bin/10/1.rs"

[[bin]]
name = "2021-10-2"
path = "2021/src/bin/10/2.rs"

[[bin]]
name = "2021-11-1"
path = "2021/src/bin/11/1.rs"

[[bin]]
name = "2021-11-2"
path = "2021/src/bin/11/2.rs"

[[bin]]
name = "2021-12-1"
path = "2021/src/bin/12/1.rs"

[[bin]]
name = "2021-12-2"
path = "2021/src/bin/12/2.rs"

[[bin]]
name = "2021-13-1"
path = "2021/src/bin/13/1.rs"

[[bin]]
name = "2021-13-2"
path = "2021/src/bin/13/2.rs"

[[bin]]
name = "2021-14-1"
path = "2021/src/bin/14/1.rs"

[[bin]]
name = "2021-14-2"
path = "2021/src/bin/14/2.rs"

[[bin]]
name = "2021-15-1"
path = "2021/src/bin/15/1.rs"

[[bin]]
name = "2021-15-2"
path = "2021/src/bin/15/2.rs"

[[bin]]
name = "2021-16-1"
path = "2021/src/bin/16/1.rs"

[[bin]]
name = "2021-16-2"
path = "2021/src/bin/16/2.rs"

[[bin]]
name = "2021-17-1"
path = "2021/src/bin/17/1.rs"

[[bin]]
name = "2021-17-2"
path = "2021/src/bin/17/2.rs"

[[bin]]
name = "2021-18-1"
path = "2021/src/bin/18/1.rs"

[[bin]]
name = "2021-18-2"
path = "2021/src/bin/18/2.rs"

[[bin]]
name = "2021-19-1"
path = "2021/src/bin/19/1.rs"

[[bin]]
name = "2021-19-2"
path = "2021/src/bin/19/2.rs"

[[bin]]
name = "2021-20-1"
path = "2021/src/bin/20/1.rs"

[[bin]]
name = "2021-20-2"
path = "2021/src/bin/20/2.rs"

[[bin]]
name = "2021-21-1"
path = "2021/src/bin/21/1.rs"

[[bin]]
name = "2021-21-2"
path = "2021/src/bin/21/2.rs"

[[bin]]
name = "2021-22-1"
path = "2021/src/bin/22/1.rs"

[[bin]]
name = "2021-22-2"
path = "2021/src/bin/22/2.rs"

[[bin]]
name = "2021-23-1"
path = "2021/src/bin/23/1.rs"

[[bin]]
name = "2021-23-2"
path = "2021/src/bin/23/2.rs"

[[bin]]
name = "2021-24-1"
path = "2021/src/bin/24/1.rs"

[[bin]]
name = "2021-24-2"
path = "2021/src/bin/24/2.rs"

[[bin]]
name = "2021-25-1"
path = "2021/src/bin/25/1.rs"

[[bin]]
name = "2021-25-2"
path = "2021/src/bin/25/2.rs"

[[bin]]
name = "2022-01-1"
path = "2022/src/bin/01/1.rs"

[[bin]]
name = "2022-01-2"
path = "2022/src/bin/01/2.rs"

[[bin]]
name = "2022-02-1"
path = "2022/src/bin/02/1.rs"

[[bin]]
name = "2022-02-2"
path = "2022/src/bin/02/2.rs"

[[bin]]
name = "2022-03-1"
path = "2022/src/bin/03/1.rs"

[[bin]]
name = "2022-03-2"
path = "2022/src/bin/03/2.rs"

[[bin]]
name = "2022-04-1"
path = "2022/src/bin/04/1.rs"

[[bin]]
name = "2022-04-2"
path = "2022/src/bin/04/2.rs"

[[bin]]
name = "2022-05-1"
path = "2022/src/bin/05/1.rs"

[[bin]]
name = "2022-05-2"
path = "2022/src/bin/05/2.rs"

[[bin]]
name = "2022-06-1"
path = "2022/src/bin/06/1.rs"

[[bin]]
name = "2022-06-2"
path = "2022/src/bin/06/2.rs"

[[bin]]
name = "2022-07-1"
path = "2022/src/bin/07/1.rs"

[[bin]]
name = "2022-07-2"
path = "2022/src/bin/07/2.rs"

[[bin]]
name = "2022-08-1"
path = "2022/src/bin/08/1.rs"

[[bin]]
name = "2022-08-2"
path = "2022/src/bin/08/2.rs"

[[bin]]
name = "2022-09-1"
path = "2022/src/bin/09/1.rs"

[[bin]]
name = "2022-09-2"
path = "2022/src/bin/09/2.rs"

[[bin]]
name = "2022-10-1"
path = "2022/src/bin/10/1.rs"

[[bin]]
name = "2022-10-2"
path = "2022/src/bin/10/2.rs"

[[bin]]
name = "2022-11-1"
path = "2022/src/bin/11/1.rs"

[[bin]]
name = "2022-11-2"
path = "2022/src/bin/11/2.rs"

[[bin]]
name = "2022-12-1"
path = "2022/src/bin/12/1.rs"

[[bin]]
name = "2022-12-2"
path = "2022/src/bin/12/2.rs"

[[bin]]
name = "2022-13-1"
path = "2022/src/bin/13/1.rs"

[[bin]]
name = "2022-13-2"
path = "2022/src/bin/13/2.rs"

[[bin]]
name = "2022-14-1"
path = "2022/src/bin/14/1.rs"

[[bin]]
name = "2022-14-2"
path = "2022/src/bin/14/2.rs"

[[bin]]
name = "2022-15-1"
path = "2022/src/bin/15/1.rs"

[[bin]]
name = "2022-15-2"
path = "2022/src/bin/15/2.rs"

[[bin]]
name = "2022-16-1"
path = "2022/src/bin/16/1.rs"

[[bin]]
name = "2022-16-2"
path = "2022/src/bin/16/2.rs"

[[bin]]
name = "2022-17-1"
path = "2022/src/bin/17/1.rs"

[[bin]]
name = "2022-17-2"
path = "2022/src/bin/17/2.rs"

[[bin]]
name = "2022-18-1"
path = "2022/src/bin/18/1.rs"

[[bin]]
name = "2022-18-2"
path = "2022/src/bin/18/2.rs"

[[bin]]
name = "2022-19-1"
path = "2022/src/bin/19/1.rs"

[[bin]]
name = "2022-19-2"
path = "2022/src/bin/19/2.rs"

[[bin]]
name = "2022-20-1"
path = "2022/src/bin/20/1.rs"

[[bin]]
name = "2022-20-2"
path = "2022/src/bin/20/2.rs"

[[bin]]
name = "2022-21-1"
path = "2022/src/bin/21/1.rs"

[[bin]]
name = "2022-21-2"
path = "2022/src/bin/21/2.rs"

[[bin]]
name = "2022-22-1"
path = "2022/src/bin/22/1.rs"

[[bin]]
name = "2022-22-2"
path = "2022/src/bin/22/2.rs"

[[bin]]
name = "2022-23-1"
path = "2022/src/bin/23/1.rs"

[[bin]]
name = "2022-23-2"
path = "2022/src/bin/23/2.rs"

[[bin]]
name = "2022-24-1"
path = "2022/src/bin/24/1.rs"

[[bin]]
name = "2022-24-2"
path = "2022/src/bin/24/2.rs"

[[bin]]
name = "2022-25-1"
path = "2022/src/bin/25/1.rs"

[[bin]]
name = "2022-25-2"
path = "2022/src/bin/25/2.rs"

[[bin]]
name="2023-01-1"
path="2023/src/bin/01/1.rs"

[[bin]]
name="2023-01-2"
path="2023/src/bin/01/2.rs"

[[bin]]
name="2023-02-1"
path="2023/src/bin/02/1.rs"

[[bin]]
name="2023-02-2"
path="2023/src/bin/02/2.rs"

[[bin]]
name="2023-03-1"
path="2023/src/bin/03/1.rs"

[[bin]]
name="2023-03-2"
path="2023/src/bin/03/2.rs"

[[bin]]
name="2023-04-1"
path="2023/src/bin/04/1.rs"

[[bin]]
name="2023-04-2"
path="2023/src/bin/04/2.rs"

[[bin]]
name="2023-05-1"
path="2023/src/bin/05/1.rs"

[[bin]]
name="2023-05-2"
path="2023/src/bin/05/2.rs"

[[bin]]
name="2023-06-1"
path="2023/src/bin/06/1.rs"

[[bin]]
name="2023-06-2"
path="2023/src/bin/06/2.rs"

[[bin]]
name="2023-07-1"
path="2023/src/bin/07/1.rs"

[[bin]]
name="2023-07-2"
path="2023/src/bin/07/2.rs"

[[bin]]
name="2023-08-1"
path="2023/src/bin/08/1.rs"

[[bin]]
name="2023-08-2"
path="2023/src/bin/08/2.rs"

[[bin]]
name="2023-09-1"
path="2023/src/bin/09/1.rs"

[[bin]]
name="2023-09-2"
path="2023/src/bin/09/2.rs"

[[bin]]
name="2023-10-1"
path="2023/src/bin/10/1.rs"

[[bin]]
name="2023-10-2"
path="2023/src/bin/10/2.rs"

[[bin]]
name="2023-11-1"
path="2023/src/bin/11/1.rs"

[[bin]]
name="2023-11-2"
path="2023/src/bin/11/2.rs"

[[bin]]
name="2023-12-1"
path="2023/src/bin/12/1.rs"

[[bin]]
name="2023-12-2"
path="2023/src/bin/12/2.rs"

[[bin]]
name="2023-13-1"
path="2023/src/bin/13/1.rs"

[[bin]]
name="2023-13-2"
path="2023/src/bin/13/2.rs"

[[bin]]
name="2023-14-1"
path="2023/src/bin/14/1.rs"

[[bin]]
name="2023-14-2"
path="2023/src/bin/14/2.rs"

[[bin]]
name="2023-15-1"
path="2023/src/bin/15/1.rs"

[[bin]]
name="2023-15-2"
path="2023/src/bin/15/2.rs"

[[bin]]
name="2023-16-1"
path="2023/src/bin/16/1.rs"

[[bin]]
name="2023-16-2"
path="2023/src/bin/16/2.rs"

[[bin]]
name="2023-17-1"
path="2023/src/bin/17/1.rs"

[[bin]]
name="2023-17-2"
path="2023/src/bin/17/2.rs"

[[bin]]
name="2023-18-1"
path="2023/src/bin/18/1.rs"

[[bin]]
name="2023-18-2"
path="2023/src/bin/18/2.rs"

[[bin]]
name="2023-19-1"
path="2023/src/bin/19/1.rs"

[[bin]]
name="2023-19-2"
path="2023/src/bin/19/2.rs"

[[bin]]
name="2023-20-1"
path="2023/src/bin/20/1.rs"

[[bin]]
name="2023-20-2"
path="2023/src/bin/20/2.rs"

[[bin]]
name="2023-21-1"
path="2023/src/bin/21/1.rs"

[[bin]]
name="2023-21-2"
path="2023/src/bin/21/2.rs"

[[bin]]
name="2023-22-1"
path="2023/src/bin/22/1.rs"

[[bin]]
name="2023-22-2"
path="2023/src/bin/22/2.rs"

[[bin]]
name="2023-23-1"
path="2023/src/bin/23/1.rs"

[[bin]]
name="2023-23-2"
path="2023/src/bin/23/2.rs"

[[bin]]
name="2023-24-1"
path="2023/src/bin/24/1.rs"

[[bin]]
name="2023-24-2"
path="2023/src/bin/24/2.rs"

[[bin]]
name="2023-25-1"
path="2023/src/bin/25/1.rs"

[[bin]]
name="2023-25-2"
path="2023/src/bin/25/2.rs"

